--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>image downloader webpage</title>
 </head>
-<link rel="stylesheet" href="style.css">
+<-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="preload" href="styles.css" as="style" onload="this.onload=null;this.rel=<noscript><link rel="stylesheet" href="styles.css"></noscript>
 <body>
     <header>
         <nav>
