--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>image downloader webpage</title>
 </head>
 <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="preload" href="styles.css" as="style" onload="this.onload=null;this.rel=<noscript><link rel="stylesheet" href="styles.css"></noscript>
+    <link rel="preload" href="styles.css" as="style" onload="this.onload=null;this.rel=<noscript><link rel="stylesheet" href="styles.css"></noscript>"
 <body>
     <header>
         <nav>
