--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>image downloader webpage</title>
 </head>
-<!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="preload" href="styles.css" as="style" onload="this.onload=null;this.rel=<noscript><link rel="stylesheet" href="styles.css"></noscript>"
+<link rel="preload stylesheet" href="style.css" as="style">
 <body>
     <header>
         <nav>
