--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>image downloader webpage</title>
 </head>
-<link rel="preload stylesheet" href="style.css" as="style">
+<link rel="preload stylesheet" href="styles.css">
 <body>
     <header>
         <nav>
