--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>image downloader webpage</title>
+    <meta description="this web use for image download">
+    <meta keyword="image downloader, image download by link, gallery photo download,free photo download,image download app,HD photo download">
+    <title>image downloader</title>
 </head>
 <link rel="preload stylesheet" href="styles.css">
 <body>
